--- a/piece/PSUrestructure/NewPSUTable.html
+++ b/piece/PSUrestructure/NewPSUTable.html
@@ -55,14 +55,11 @@ src: url('../fonts/Portrait-MediumItalic-Web.woff');
 font-weight: 500;
 font-style: italic;
 }
-	
-
 h1 {
       font-family:DrukText;
       font-size: 40px;
       display: block;
   }
-
         table.sortable thead {
             background-color:#eee;
             color:#000000;
@@ -93,16 +90,35 @@ h1 {
 					 font-weight: bold;
 					 position: sticky; top: 0;
 				}
+
+				#wrapper
+			  {
+			  width:95%;
+			  
+			  margin:0 auto;
+			  overflow:hidden;
+			  }
+			  #header
+			  {
+			  overflow:hidden;
+			  max-width: 95%;
+			  margin-bottom:0px;
+			  text-align:center;
+			  vertical-align: text-top;
+			  }
+			  #tablediv {
+			  }
+
+
       </style>
   </head>
 
   <body>
-
-
-
-    <div id="header"><h1>Xitongs (Functional Hierarchies) that Can Serve as Professional Supervisory Units, per MPS 2019 List</h1></div>
-
+		<div id="wrapper">
+    <div id="header"><h1><em>Xitongs</em> (Functional Hierarchies) that Can Serve as Professional Supervisory Units, per MPS 2019 List</h1></div>
+    <div id='tablediv'></div>
     </div>
+
 
 
 <table class="sortable">
