--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1299,6 +1299,17 @@
       <td>Guangxi</td>
     </tr>
     <tr>
+      <td>Cranberry Marketing Committee (CMC)</td>
+      <td>美国蔓越莓市场协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2019-07-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Croatian Chamber of Economy</td>
       <td>克罗地亚经济商会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -2080,17 +2091,6 @@
       <td>Beijing, Shaanxi, Yunnan</td>
     </tr>
     <tr>
-      <td>Hanns Seidel Foundation (Zhejiang)</td>
-      <td>德国汉斯•赛德尔基金会浙江代表处</td>
-      <td>Zhejiang Department of Education</td>
-      <td>浙江省教育厅</td>
-      <td>Germany</td>
-      <td>Education, International Relations/Exchange</td>
-      <td>Zhejiang</td>
-      <td>2019-07-12</td>
-      <td>Zhejiang</td>
-    </tr>
-    <tr>
       <td>Hanns Seidel Foundation (Beijing)</td>
       <td>汉斯·赛德尔基金会</td>
       <td>Ministry of Education</td>
@@ -2133,6 +2133,17 @@
       <td>Shanghai</td>
       <td>2017-09-26</td>
       <td>Anhui, Jiangsu, Shanghai, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Hanns Seidel Foundation (Zhejiang)</td>
+      <td>德国汉斯•赛德尔基金会浙江代表处</td>
+      <td>Zhejiang Department of Education</td>
+      <td>浙江省教育厅</td>
+      <td>Germany</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Zhejiang</td>
+      <td>2019-07-12</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Harvest Charity Foundation Limited</td>
