--- a/monthly/NewPSUHeatmap.html
+++ b/monthly/NewPSUHeatmap.html
@@ -169,9 +169,66 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   legendElementWidth = cellSize*2.7,
   colorBuckets = 13,
   colors = ['#ffffff','#ffd6de','#ffadbe','#ff859d','#ff5c7c','#ff335c','#ff0032','#e0002d','#b80025','#8f001d','#660014','#3d000c','#140004'];
-  hcrow = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56],
+  hcrow = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59],
   hccol = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35], // these are what shows up in the first two columns of your TSV data, they match up with the labels below
-  rowLabel = ["All-China Federation of Trade Unions", "All-China Women’s Federation", "All-China Youth Federation*", "China Association for Science and Technology", "China Banking and Insurance Regulatory Commission", "China Disabled Persons’ Federation", "China Meteorological Administration", "China Securities Regulatory Commission", "Chinese Association for International Understanding*†", "Chinese People’s Association for Friendship with Foreign Countries*", "Civil Aviation Administration of China*", "Communist Youth League of China*", "Cyberspace Administration of China", "General Administration of Customs*", "General Administration of Sport", "Ministry of Agriculture and Rural Affairs", "Ministry of Civil Affairs", "Ministry of Commerce", "Ministry of Culture and Tourism", "Ministry of Ecology and Environment", "Ministry of Education", "Ministry of Emergency Management", "Ministry of Finance", "Ministry of Foreign Affairs*", "Ministry of Housing and Urban-Rural Development", "Ministry of Human Resources and Social Security", "Ministry of Industry and Information Technology**", "Ministry of Justice", "Ministry of Natural Resources*", "Ministry of Science and Technology", "Ministry of Transport", "Ministry of Water Resources", "National Audit Office", "National Bureau of Statistics", "National Copyright Administration†", "National Development and Reform Commission", "National Food and Strategic Reserves Administration*", "National Energy Administration", "National Forestry and Grassland Administration", "National Health Commission", "Overseas Chinese Affairs Office of the State Council", "People’s Bank of China", "Shanghai Institutes for International Studies*†", "Standardization Administration of the People's Republic of China**‡", "State Administration of Cultural Heritage", "State Administration of Foreign Experts Affairs", "State Administration for Market Regulation", "State Administration of Radio and Television", "State Administration of Taxation", "State Administration of Traditional Chinese Medicine", "State Ethnic Affairs Commission*", "State Council Leading Group Office of Poverty Alleviation and Development", "State Council Taiwan Affairs Office*", "State Intellectual Property Office", "State Oceanic Administration", "State Post Bureau"], // change to gene name or probe id
+  rowLabel = ["All China-Federation of Returned Overseas Chinese",
+  "All-China Federation of Trade Unions",
+  "All-China Women's Federation",
+  "All-China Youth Federation",
+  "China Association for Science and Technology",
+  "China Banking and Insurance Regulatory Commission",
+  "China Council for the Promotion of International Trade",
+  "China Disabled Persons' Federation",
+  "China Meteorological Administration",
+  "China Securities Regulatory Commission",
+  "Chinese Association for International Understanding†",
+  "Chinese People's Association for Friendship with Foreign Countries",
+  "Civil Aviation Administration of China",
+  "Communist Party Central Committee International Liaison Department",
+  "Communist Youth League of China",
+  "Cyberspace Administration of China",
+  "General Administration of Customs",
+  "General Administration of Sport",
+  "Ministry of Agriculture and Rural Affairs",
+  "Ministry of Civil Affairs",
+  "Ministry of Commerce",
+  "Ministry of Culture and Tourism",
+  "Ministry of Ecology and Environment",
+  "Ministry of Education",
+  "Ministry of Emergency Management",
+  "Ministry of Finance",
+  "Ministry of Foreign Affairs",
+  "Ministry of Housing and Urban-Rural Development",
+  "Ministry of Human Resources and Social Security",
+  "Ministry of Industry and Information Technology*",
+  "Ministry of Justice",
+  "Ministry of Natural Resources",
+  "Ministry of Science and Technology",
+  "Ministry of Transport",
+  "Ministry of Water Resources",
+  "National Audit Office",
+  "National Bureau of Statistics",
+  "National Copyright Administration†",
+  "National Development and Reform Commission",
+  "National Food and Strategic Reserves Administration",
+  "National Energy Administration",
+  "National Forestry and Grassland Administration",
+  "National Health Commission",
+  "National Medical Products Administration",
+  "National Radio and Television Administration",
+  "People’s Bank of China",
+  "Shanghai Institutes for International Studies†",
+  "State Administration for Market Regulation",
+  "State Administration of Cultural Heritage",
+  "State Administration for Market Regulation",
+  "State Administration of Taxation",
+  "State Administration of Traditional Chinese Medicine",
+  "State Council Leading Group Office of Poverty Alleviation and Development",
+  "State Council Overseas Chinese Affairs Office",
+  "State Council Taiwan Affairs Office",
+  "State Ethnic Affairs Commission",
+  "State Intellectual Property Office",
+  "State Post Bureau","State Press and Publication Administration"], // change to gene name or probe id
 
   colLabel = ["Total Foreign NGOs Sponsored", "National-Level Total", "Provincial-Level Total", "Anhui", "Beijing", "Chongqing", "Fujian", "Gansu", "Guangdong", "Guangxi", "Guizhou", "Hainan", "Hebei", "Heilongjiang", "Henan", "Hubei", "Hunan", "Inner Mongolia", "Jiangsu", "Jiangxi", "Jilin", "Liaoning", "Ningxia", "Qinghai", "Shaanxi", "Shandong", "Shanghai", "Shanxi", "Sichuan", "Tianjin", "Tibet", "Xinjiang", "Xinjiang Bingtuan", "Yunnan", "Zhejiang"]; // change to contrast name
 d3.tsv("NewPSUHeatmapData.tsv",
@@ -373,5 +430,5 @@ function(error, data) {
 });
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>*Not included on the Ministry of Public Security’s (MPS’s) 2017 list of eligible Professional Supervisory Units (PSUs); as the MPS is known to be updating this list, it is likely that these PSUs will be added to the next iteration.</li><li>†Does not have corresponding local offices (if a national-level entity) or does not have a corresponding national office (if a local entity).</li><li>**At the provincial level, the corresponding entities are called &ldquo;Economy and Informatization Commissions.&rdquo;</li><li>‡At the provincial level, the corresponding entities are called &ldquo;Administrations of Quality and Technical Supervision.&rdquo;</li><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>*At the provincial level, the corresponding entities are called “Economy and Informatization Commissions.”</li><li>†Does not have corresponding local offices (if a national-level entity) or does not have a corresponding national office (if a local entity).</li></li></ul></em>");
 </script>
