--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1554,7 +1554,7 @@
     <tr>
       <td>European Broadcasting Union (EBU)</td>
       <td>欧洲广播联盟</td>
-      <td>State Administration of Radio and Television (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
+      <td>National Radio and Television Administration (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
       <td>国家新闻出版广电总局</td>
       <td>Switzerland</td>
       <td>Arts and Culture, International Relations/Exchange, Media, Sport, Technology</td>
@@ -2368,7 +2368,7 @@
     <tr>
       <td>IFPI</td>
       <td>国际唱片业协会</td>
-      <td>State Administration of Radio and Television (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
+      <td>National Radio and Television Administration (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
       <td>国家新闻出版广电总局</td>
       <td>Switzerland</td>
       <td>Trade</td>
@@ -3171,7 +3171,7 @@
     <tr>
       <td>Korean Film Council</td>
       <td>电影振兴委员会</td>
-      <td>State Administration of Radio and Television (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
+      <td>National Radio and Television Administration (formerly State Administration of Press, Publication, Radio, Film and Television)</td>
       <td>国家新闻出版广电总局</td>
       <td>South Korea</td>
       <td>Arts and Culture, Trade</td>
@@ -3358,7 +3358,7 @@
     <tr>
       <td>Milstein Medical Asian American Partnership Foundation</td>
       <td>米尔斯坦亚美医学基金会</td>
-      <td>State Administration of Foreign Experts Affairs</td>
+      <td>State Administration of Foreign Experts Affairs (under the Ministry of Science and Technology)</td>
       <td>中华人民共和国国家外国专家局</td>
       <td>United States</td>
       <td>Health, International Relations/Exchange</td>
@@ -3783,6 +3783,17 @@
       <td>Beijing</td>
       <td>2018-02-05</td>
       <td>Beijing</td>
+    </tr>
+    <tr>
+      <td>Orbis International</td>
+      <td>国际奥比斯</td>
+      <td>Shanghai Municipal Health Commission</td>
+      <td>上海市卫生健康委员会</td>
+      <td>United States</td>
+      <td>Health, Poverty Alleviation</td>
+      <td>Shanghai</td>
+      <td>2019-07-26</td>
+      <td>Shanghai</td>
     </tr>
     <tr>
       <td>Organization for Industrial, Spiritual, and Cultural Advancement-International</td>
