--- a/piece/xjeuro/xjeuro.html
+++ b/piece/xjeuro/xjeuro.html
@@ -38,10 +38,8 @@
 	         font-size: 16px;
            font-weight: bold;
            border: 1px solid #CCC;
+		position: sticky; top: 0;
         }
-
-
-</style>
 
 
 
