--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3730,6 +3730,17 @@
       <td>Liaoning</td>
     </tr>
     <tr>
+      <td>Norwegian Mission Alliance</td>
+      <td>协力会</td>
+      <td>Health Commission of Yunnan Province</td>
+      <td>云南省卫生健康委员会</td>
+      <td>Norway</td>
+      <td>Civil Society Capacity-Building, Disabilities, Health</td>
+      <td>Yunnan</td>
+      <td>2019-04-04</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
       <td>Okinawa Industrial Revitalization Commune (Beijing)</td>
       <td>公益财团法人冲绳县产业振兴公社</td>
       <td>Beijing Commission of Commerce</td>
@@ -4918,17 +4929,6 @@
       <td>Beijing</td>
     </tr>
     <tr>
-      <td>United Strength Organization</td>
-      <td>协力会</td>
-      <td>Health Commission of Yunnan Province</td>
-      <td>云南省卫生健康委员会</td>
-      <td>Norway</td>
-      <td>Civil Society Capacity-Building, Disabilities, Health</td>
-      <td>Yunnan</td>
-      <td>2019-04-04</td>
-      <td>Yunnan</td>
-    </tr>
-    <tr>
       <td>United Way Worldwide</td>
       <td>全球联合之路</td>
       <td>Shanghai Bureau of Civil Affairs</td>
@@ -5180,6 +5180,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>World Gold Council</td>
+      <td>瑞士世界黄金协会</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>Switzerland</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2019-08-08</td>
+      <td>Beijing, Gansu, Hebei, Heilongjiang, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Xinjiang</td>
     </tr>
     <tr>
       <td>World Resources Institute</td>
