--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -52,62 +52,91 @@
 <!–– add your tableizer data below this line––>
 
 
-<table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>F500 Rank</th></tr></thead><tbody>
- <tr><td>ExxonMobil</td><td>• Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
- <tr><td>Amazon.com</td><td>• Cooperates with Ego Group Co. to co-invest in an E-commerce industry complex in Korla, Xinjiang</td><td>8</td></tr>
- <tr><td>General Motors</td><td>• Joint Venture SAIC-GM has authorized Buick and Chevrolet dealer and service stores in Xinjiang</td><td>10</td></tr>
- <tr><td>Ford Motor</td><td>• Has authorized dealers and service stations in Xinjiang</td><td>11</td></tr>
- <tr><td>GE</td><td>• Operates an Urumqi office</br></br>• In a joint venture that provides technology support to certain coal gas projects in Xinjiang</br></br>• As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
- <tr><td>Boeing</td><td>• Operates a service point in Urumqi</td><td>27</td></tr>
- <tr><td>Citigroup</td><td>• Citigroup Global Markets Asia owns a minority stake in a securities joint venture with a presence in Xinjiang</br></br>• James Griffiths, a spokesperson, made the following statement to ChinaFile: "As I sad [sic] it is factually correct Citi has no office in xianjiang [sic] so please make that clear alongside the rep office of of [sic] our JV partner."</td><td>32</td></tr>
- <tr><td>Dell</td><td>• Developing a smart city system for Shihezi city</br></br>• Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
- <tr><td>PepsiCo</td><td>• Lanzhou PepsiCo has a sales office in Urumqi</td><td>45</td></tr>
- <tr><td>DowDuPont </td><td>• Operates a Xinjiang branch</br></br>• Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang</td><td>47</td></tr>
- <tr><td>Archer Daniels Midland</td><td>• Holds a minority stake in Wilmar International, whose subsidiary, Yihai Kerry, owns a company in Xinjiang</td><td>48</td></tr>
- <tr><td>FedEx</td><td>• Has a dropoff location in Urumqi</td><td>50</td></tr>
- <tr><td>United Technologies</td><td>• Otis Elevator, a business unit, sells elevators and provides related services to Xinjiang cities<br></br>• Carrier, a business unit, sells air conditioning systems in Urumqi</td><td>52</td></tr>
- <tr><td>HP</td><td>• Authorizes dozens of distributors of HP products in Xinjiang</td><td>58</td></tr>
- <tr><td>Cisco</td><td>• Provides products and services to China Mobile Xinjiang Company and Petro China Xinjiang Company</td><td>62</td></tr>
- <tr><td>Honeywell</td><td>• Operates an office in Urumqi and provides smart power grids and constructs transportation infrastructure</td><td>77</td></tr>
- <tr><td>Oracle</td><td>• Its Exadata Database Machine is used by the Urumqi Human Resources and Social Security Bureau and Xinjiang Telecom</td><td>82</td></tr>
- <tr><td>Coca Cola</td><td>• Operates a bottling plant in Urumqi</td><td>87</td></tr>
- <tr><td>Nike</td><td>• Sponsors a Xinjiang summer basketball league team</td><td>89</td></tr>
- <tr><td>3M</td><td>• Operates a sales office in Urumqi  </td><td>97</td></tr>
- <tr><td>Abbott Laboratories</td><td>• Sells i-STAT Handheld Blood Analyzers to Xinjiang through an agent/distributor called China Medical Instruments Co. Xinjiang Company</td><td>111</td></tr>
- <tr><td>Heinz </td><td>• Cooperates with COFCO Tunhe, Ltd., in tomato production in Xinjiang</td><td>114</td></tr>
- <tr><td>Mondelez International</td><td>• Buys sugar from a Xinjiang company <br></br>• Buys tomato products from a Xinjiang company</td><td>117</td></tr>
- <tr><td>Eli Lilly</td><td>• Engaged in a long-term partnership with a chest hospital in Xinjiang</td><td>129</td></tr>
- <tr><td>Thermo Fisher </td><td>• Sells DNA-sequencing products to Xinjiang through agents/distributors </td><td>144</td></tr>
- <tr><td>Halliburton</td><td>• Partnered with SPT Energy Group to co-found an oil and gas field service company in Xinjiang </td><td>146</td></tr>
- <tr><td>Cummins </td><td>• Operates customer service stations in Xinjiang through a joint venture </td><td>149</td></tr>
- <tr><td>Western Digital</td><td>• Designs the hard drive used in Hikvision, an Urumqi company that manufactures surveillance devices and sells them in Xinjiang</td><td>158</td></tr>
- <tr><td>Danaher</td><td>• A subsidiary company sells water-quality analytical instruments to Xinjiang oil fields and petroleum and chemical companies </td><td>162</td></tr>
- <tr><td>AECOM</td><td>• Provides environment evaluation services in Xinjiang <br></br>• Provides infrastructure design in Xinjiang <br></br>• In a joint venture consulting company with an Urumqi office that provides services in Xinjiang</td><td>164</td></tr>
- <tr><td>Synnex</td><td>• Provides supply chain solutions to a Xinjiang automotive parts company</td><td>169</td></tr>
- <tr><td>Emerson</td><td>• Operates an Urumqi office<br></br>• Provides intelligent monitoring of wellheads to PetroChina Xinjiang Oil Field Company's Kelameili gas fields</td><td>178</td></tr>
- <tr><td>General Mills</td><td>• Operates a Häagen-Dazs store in Urumqi</td><td>182</td></tr>
- <tr><td>Goodyear Tire and Rubber</td><td>• Operates a flagship store in Urumqi</td><td>187</td></tr>
- <tr><td>Land O'Lakes, Inc.</td><td>• Cooperates with the Xinjiang Academy of Animal Sciences in forage grass production</td><td>216</td></tr>
- <tr><td>Estee Lauder</td><td>• Operates several retail stores in Urumqi</td><td>258</td></tr>
- <tr><td>Tesla</td><td>• Operates destination charging stations in Urumqi</td><td>260</td></tr>
- <tr><td>Xerox</td><td>• Joint venture Fuji-Xerox has a sales and service office in Urumqi</td><td>291</td></tr>
- <tr><td>Conagra Brands</td><td>• Conagra operates a joint venture that processes tomatoes harvested from Xinjiang</td><td>321</td></tr>
- <tr><td>Hilton</td><td>• Operates a Hilton hotel in Urumqi</td><td>324</td></tr>
- <tr><td>PVH</td><td>• In a joint venture that operates, or at least authorizes, multiple Tommy Hilfiger and Calvin Klein retail stores in Xinjiang</td><td>332</td></tr>
- <tr><td>Avis Budget Group</td><td> • Operates multiple stores in Xinjiang via a joint venture</td><td>333</td></tr>
- <tr><td>Vertiv</td><td>• Provides power, thermal, and infrastructure services to China Mobile Xinjiang</td><td>346</td></tr>
- <tr><td>AGCO</td><td>• Sells agricultural machinery to Xinjiang through an agent/distributor</td><td>347</td></tr>
- <tr><td>Campbell Soup</td><td>• Buys tomato products from COFCO Tunhe in Xinjiang</td><td>358</td></tr>
- <tr><td>Mosaic</td><td>• Cooperates with a state-owned company to sell fertilizer products in Xinjiang </td><td>382</td></tr>
- <tr><td>Yum China Holdings</td><td>• Operates KFC and Pizza Hut restaurants in Xinjiang</td><td>397</td></tr>
- <tr><td>Fortive</td><td>• Fluke, a subsidiary, operates a Xinjiang sales company</td><td>420</td></tr>
- <tr><td>Motorola Solutions</td><td>• Supplies a radio communication system to the Fire Prevention Office of the Forestry Department in Xinjiang</td><td>443</td></tr>
- <tr><td>Rockwell</td><td>• Sells products into Xinjiang through an agent/distributor</td><td>445</td></tr>
- <tr><td>Wyndham Hotels & Resorts</td><td>• Operates Super 8 Motels in Urumqi</td><td>479</td></tr>
- <tr><td>Avon Products</td><td>• Has an Urumqi branch company</td><td>485</td></tr>
- <tr><td>Peabody Energy</td><td>• Cooperates with the Xinjiang government to develop coal mines and build coal trading platforms, power plants, and gas station equipment</td><td>491</td></tr>
-</tbody></table>
+Company, Country	Presence in Xinjiang
+ABB, Switzerland	"• Operates a service center in Urumqi
+• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"
+Air Liquide, France	• Has built plants in Xinjiang and opened a subsidiary in Urumqi
+Airbus, France	• Subsidiary Airbus Defence and Space worked on the Urumqi subway
+ArcelorMittal, Luxembourg	• Has a sales office in Urumqi
+Assicurazioni Generali, Italy	• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million
+Aviva, United Kingdom	• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang
+BASF, Germany	"• Operates a chemical plant in Korla
+• Cooperates on tomato production
+with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"
+Bayer, Germany	"• Has advertised for positions in Xinjiang
+• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"
+BMW Group, Germany	"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang
+• Has produced marketing campaign produced in Xinjiang"
+Bosch Group, Germany	• Sells water heaters for residential building development projects in Xinjiang• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development
+Carrefour, France	"• Buys melons from Xinjiang
+• Operates stores in Xinjiang, most notably one next the the Grand Bazaar in Urumqi"
+Chubb, Switzerland	• Owns a minority stake in Huatai Group which operates offices in Xinjiang
+Daimler, Germany	• Has official dealerships in five cities across Xinjiang
+Danone, France	• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang
+Deutsche Bank, Germany	"• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company
+• Managed bond issuance for Xinjiang Goldwind"
+Deutsche Bahn, Germany	"• Operates an office for its logistics business in Urumqi
+• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang"
+Deutsche Post DHL Group, Germany	• Has a DHL location in Urumqi
+Engie, France	• Owns a minority stake in Unisun, a solar services company that works in Xinjiang
+Ericsson, Sweden	• Operates an office in Xinjiang and has provided LTE technology in the region
+EssilorLuxottica, France	• Owns a 50% stake in Photosynthesis Group, which operates stores across Xinjiang
+EXOR Group, Netherlands	"• Subsidiary CNH Industrial has a plant in Urumqi
+• The largest shareholder of Fiat Chrysler, which has dealerships across Xinjiang for brands such as Jeep, Fiat, Chrysler, Dodge, and Maserati"
+GlaxoSmithKline, United Kingdom	• Has sales representatives based in and working across Xinjiang
+Heineken Holding, Netherlands	• Owns a minority stake in China Resources Beer, which operates stores in Xinjiang
+Inditex (Industria de Diseno Textil), Spain	• Operates a Zara store in Xinjiang
+ING Group, Netherlands	• Owns a minority stake in Bank of Beijing, which operates branches in Xinjiang
+Intesa Sanpaolo, Italy	•Financed a tree plantation for F.I.L.A. Group in Xinjiang, extending $1.8 million in credit
+Johnson Controls International, Ireland	"• Has advertised for jobs in Xinjiang
+• Has a branch office in Xinjiang"
+Kering, France	• Operates a Gucci story in Urumqi
+L'Oreal, France	• Operates a hair salon in Urumqi
+Linde, Germany	• Built energy plants across the region
+Louis Dreyfus, Netherlands	• Operates an office in Urumqi for cotton trading
+Lufthansa Group, Germany	• Owns a minority stake in an airline catering company based in Xinjiang
+LVMH Moet Hennessy, France	• Operates a Tag Heuer shop and Dior cosmetics stands in Xinjiang
+LyondellBasell Industries, Netherlands	• Licensed technology to a PetroChina subsidiary in Korla
+Maersk Group, Denmark	• Subsidiary Damco ships cotton to a Xinjiang production plant for Esquel, a clothing manufacturer
+Medtronic, Ireland	• Has sales and support staff working in Xinjiang
+Metro, Germany	• Buys fruit from Xinjiang
+Michelin, France	• Has over 20 authorized tire dealers across Xinjiang• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China
+Munich Re Group, Germany	• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO
+Nestle, Switzerland	• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes
+Nokia, Finland	"• Operates a branch in Urumqi
+• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang"
+Novartis, Switzerland	• Operates a pharmaceuticals office in Urumqi
+Peugeot, France	• Has official dealerships across Xinjiang for the Citroen brand
+Philips, Netherlands	• Has hired sales positions in Xinjiang
+Rabobank Group, Netherlands	• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company
+Renault, France	• Has official dealerships in five cities across Xinjiang
+Roche Group, Switzerland	• Has advertised for account managers in two cities in Xinjiang
+Royal Dutch Shell, Netherlands	"• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas
+• Lubricants business has staff working in Xinjiang•According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated."
+Safran, France	• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023
+Saint-Gobain, France	• Has advertised for sales positions in Xinjiang
+Sanofi, France	• Has a distribution center in Xinjiang and has hired staff across the region
+SAP, Germany	• Offers long-term financial and technical support for the Xinjiang Football Youth Association
+Schneider Electric, France	• Operates a logistics center in Urumqi
+Siemens, Germany	"• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities
+• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang
+• Has a branch office in Urumqi"
+Swiss Re, Switzerland	"• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program
+• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant"
+Telefonica, Spain	• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang
+Tesco, United Kingdom	• Owns a minority stake in a joint venture with China Resources Enterprise, operating stores in Xinjiang
+ThyssenKrupp, Germany	• Sells mining equipment in Xinjiang
+Total, France	• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy
+Unilever, Netherlands	• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes
+Veolia Environment, France	• Operates a wastewater treatment plant in Urumqi
+Volkswagen, Germany	"• Volkswagen Group China built a factory near Urumqi, with a capacity of 50,000 vehicles a year
+• Has 38 authorized dealerships for brands including Audi, Porsche, Skoda, Scania, MAN, and Volkswagen
+• Built a testing ground in Xinjiang together with SAIC"
+Boehringer Ingelheim, Germany	• Has hired staff in Xinjiang
+UBS Group, Switzerland	• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang
+Adidas, Germany	• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation
+Fresenius, Germany	• Has hired staff to work in Xinjiang
+Anheuser-Busch Inbev, Belgium	• Uses Xinjiang hops in Jiafeng beer
 
 <!–– add your tableizer data above this line––>
 </body>
