--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -52,91 +52,93 @@
 <!–– add your tableizer data below this line––>
 
 
-Company, Country	Presence in Xinjiang
-ABB, Switzerland	"• Operates a service center in Urumqi
-• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"
-Air Liquide, France	• Has built plants in Xinjiang and opened a subsidiary in Urumqi
-Airbus, France	• Subsidiary Airbus Defence and Space worked on the Urumqi subway
-ArcelorMittal, Luxembourg	• Has a sales office in Urumqi
-Assicurazioni Generali, Italy	• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million
-Aviva, United Kingdom	• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang
-BASF, Germany	"• Operates a chemical plant in Korla
-• Cooperates on tomato production
-with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"
-Bayer, Germany	"• Has advertised for positions in Xinjiang
-• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"
-BMW Group, Germany	"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang
-• Has produced marketing campaign produced in Xinjiang"
-Bosch Group, Germany	• Sells water heaters for residential building development projects in Xinjiang• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development
-Carrefour, France	"• Buys melons from Xinjiang
-• Operates stores in Xinjiang, most notably one next the the Grand Bazaar in Urumqi"
-Chubb, Switzerland	• Owns a minority stake in Huatai Group which operates offices in Xinjiang
-Daimler, Germany	• Has official dealerships in five cities across Xinjiang
-Danone, France	• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang
-Deutsche Bank, Germany	"• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company
-• Managed bond issuance for Xinjiang Goldwind"
-Deutsche Bahn, Germany	"• Operates an office for its logistics business in Urumqi
-• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang"
-Deutsche Post DHL Group, Germany	• Has a DHL location in Urumqi
-Engie, France	• Owns a minority stake in Unisun, a solar services company that works in Xinjiang
-Ericsson, Sweden	• Operates an office in Xinjiang and has provided LTE technology in the region
-EssilorLuxottica, France	• Owns a 50% stake in Photosynthesis Group, which operates stores across Xinjiang
-EXOR Group, Netherlands	"• Subsidiary CNH Industrial has a plant in Urumqi
-• The largest shareholder of Fiat Chrysler, which has dealerships across Xinjiang for brands such as Jeep, Fiat, Chrysler, Dodge, and Maserati"
-GlaxoSmithKline, United Kingdom	• Has sales representatives based in and working across Xinjiang
-Heineken Holding, Netherlands	• Owns a minority stake in China Resources Beer, which operates stores in Xinjiang
-Inditex (Industria de Diseno Textil), Spain	• Operates a Zara store in Xinjiang
-ING Group, Netherlands	• Owns a minority stake in Bank of Beijing, which operates branches in Xinjiang
-Intesa Sanpaolo, Italy	•Financed a tree plantation for F.I.L.A. Group in Xinjiang, extending $1.8 million in credit
-Johnson Controls International, Ireland	"• Has advertised for jobs in Xinjiang
-• Has a branch office in Xinjiang"
-Kering, France	• Operates a Gucci story in Urumqi
-L'Oreal, France	• Operates a hair salon in Urumqi
-Linde, Germany	• Built energy plants across the region
-Louis Dreyfus, Netherlands	• Operates an office in Urumqi for cotton trading
-Lufthansa Group, Germany	• Owns a minority stake in an airline catering company based in Xinjiang
-LVMH Moet Hennessy, France	• Operates a Tag Heuer shop and Dior cosmetics stands in Xinjiang
-LyondellBasell Industries, Netherlands	• Licensed technology to a PetroChina subsidiary in Korla
-Maersk Group, Denmark	• Subsidiary Damco ships cotton to a Xinjiang production plant for Esquel, a clothing manufacturer
-Medtronic, Ireland	• Has sales and support staff working in Xinjiang
-Metro, Germany	• Buys fruit from Xinjiang
-Michelin, France	• Has over 20 authorized tire dealers across Xinjiang• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China
-Munich Re Group, Germany	• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO
-Nestle, Switzerland	• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes
-Nokia, Finland	"• Operates a branch in Urumqi
-• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang"
-Novartis, Switzerland	• Operates a pharmaceuticals office in Urumqi
-Peugeot, France	• Has official dealerships across Xinjiang for the Citroen brand
-Philips, Netherlands	• Has hired sales positions in Xinjiang
-Rabobank Group, Netherlands	• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company
-Renault, France	• Has official dealerships in five cities across Xinjiang
-Roche Group, Switzerland	• Has advertised for account managers in two cities in Xinjiang
-Royal Dutch Shell, Netherlands	"• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas
-• Lubricants business has staff working in Xinjiang•According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated."
-Safran, France	• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023
-Saint-Gobain, France	• Has advertised for sales positions in Xinjiang
-Sanofi, France	• Has a distribution center in Xinjiang and has hired staff across the region
-SAP, Germany	• Offers long-term financial and technical support for the Xinjiang Football Youth Association
-Schneider Electric, France	• Operates a logistics center in Urumqi
-Siemens, Germany	"• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities
-• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang
-• Has a branch office in Urumqi"
-Swiss Re, Switzerland	"• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program
-• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant"
-Telefonica, Spain	• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang
-Tesco, United Kingdom	• Owns a minority stake in a joint venture with China Resources Enterprise, operating stores in Xinjiang
-ThyssenKrupp, Germany	• Sells mining equipment in Xinjiang
-Total, France	• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy
-Unilever, Netherlands	• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes
-Veolia Environment, France	• Operates a wastewater treatment plant in Urumqi
-Volkswagen, Germany	"• Volkswagen Group China built a factory near Urumqi, with a capacity of 50,000 vehicles a year
-• Has 38 authorized dealerships for brands including Audi, Porsche, Skoda, Scania, MAN, and Volkswagen
-• Built a testing ground in Xinjiang together with SAIC"
-Boehringer Ingelheim, Germany	• Has hired staff in Xinjiang
-UBS Group, Switzerland	• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang
-Adidas, Germany	• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation
-Fresenius, Germany	• Has hired staff to work in Xinjiang
-Anheuser-Busch Inbev, Belgium	• Uses Xinjiang hops in Jiafeng beer
+<table class="tableizer-table">
+<thead><tr class="tableizer-firstrow"><th>Company, Country</th><th>Presence in Xinjiang</th></tr></thead><tbody>
+ <tr><td>ABB, Switzerland</td><td>"• Operates a service center in Urumqi</td></tr>
+ <tr><td>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"</td></tr>
+ <tr><td>Air Liquide, France</td><td>• Has built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
+ <tr><td>Airbus, France</td><td>• Subsidiary Airbus Defence and Space worked on the Urumqi subway</td></tr>
+ <tr><td>ArcelorMittal, Luxembourg</td><td>• Has a sales office in Urumqi</td></tr>
+ <tr><td>Assicurazioni Generali, Italy</td><td>• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million</td></tr>
+ <tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang</td></tr>
+ <tr><td>BASF, Germany</td><td>"• Operates a chemical plant in Korla</td></tr>
+ <tr><td>• Cooperates on tomato production</td></tr>
+ <tr><td>with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
+ <tr><td>Bayer, Germany</td><td>"• Has advertised for positions in Xinjiang</td></tr>
+ <tr><td>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
+ <tr><td>BMW Group, Germany</td><td>"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</td></tr>
+ <tr><td>• Has produced marketing campaign produced in Xinjiang"</td></tr>
+ <tr><td>Bosch Group, Germany</td><td>• Sells water heaters for residential building development projects in Xinjiang• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development</td></tr>
+ <tr><td>Carrefour, France</td><td>"• Buys melons from Xinjiang</td></tr>
+ <tr><td>• Operates stores in Xinjiang, most notably one next the the Grand Bazaar in Urumqi"</td></tr>
+ <tr><td>Chubb, Switzerland</td><td>• Owns a minority stake in Huatai Group which operates offices in Xinjiang</td></tr>
+ <tr><td>Daimler, Germany</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
+ <tr><td>Danone, France</td><td>• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang</td></tr>
+ <tr><td>Deutsche Bank, Germany</td><td>"• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</td></tr>
+ <tr><td>• Managed bond issuance for Xinjiang Goldwind"</td></tr>
+ <tr><td>Deutsche Bahn, Germany</td><td>"• Operates an office for its logistics business in Urumqi</td></tr>
+ <tr><td>• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang"</td></tr>
+ <tr><td>Deutsche Post DHL Group, Germany</td><td>• Has a DHL location in Urumqi</td></tr>
+ <tr><td>Engie, France</td><td>• Owns a minority stake in Unisun, a solar services company that works in Xinjiang</td></tr>
+ <tr><td>Ericsson, Sweden</td><td>• Operates an office in Xinjiang and has provided LTE technology in the region</td></tr>
+ <tr><td>EssilorLuxottica, France</td><td>• Owns a 50% stake in Photosynthesis Group, which operates stores across Xinjiang</td></tr>
+ <tr><td>EXOR Group, Netherlands</td><td>"• Subsidiary CNH Industrial has a plant in Urumqi</td></tr>
+ <tr><td>• The largest shareholder of Fiat Chrysler, which has dealerships across Xinjiang for brands such as Jeep, Fiat, Chrysler, Dodge, and Maserati"</td></tr>
+ <tr><td>GlaxoSmithKline, United Kingdom</td><td>• Has sales representatives based in and working across Xinjiang</td></tr>
+ <tr><td>Heineken Holding, Netherlands</td><td>• Owns a minority stake in China Resources Beer, which operates stores in Xinjiang</td></tr>
+ <tr><td>Inditex (Industria de Diseno Textil), Spain</td><td>• Operates a Zara store in Xinjiang</td></tr>
+ <tr><td>ING Group, Netherlands</td><td>• Owns a minority stake in Bank of Beijing, which operates branches in Xinjiang</td></tr>
+ <tr><td>Intesa Sanpaolo, Italy</td><td>•Financed a tree plantation for F.I.L.A. Group in Xinjiang, extending $1.8 million in credit</td></tr>
+ <tr><td>Johnson Controls International, Ireland</td><td>"• Has advertised for jobs in Xinjiang</td></tr>
+ <tr><td>• Has a branch office in Xinjiang"</td></tr>
+ <tr><td>Kering, France</td><td>• Operates a Gucci story in Urumqi</td></tr>
+ <tr><td>L'Oreal, France</td><td>• Operates a hair salon in Urumqi</td></tr>
+ <tr><td>Linde, Germany</td><td>• Built energy plants across the region</td></tr>
+ <tr><td>Louis Dreyfus, Netherlands</td><td>• Operates an office in Urumqi for cotton trading</td></tr>
+ <tr><td>Lufthansa Group, Germany</td><td>• Owns a minority stake in an airline catering company based in Xinjiang</td></tr>
+ <tr><td>LVMH Moet Hennessy, France</td><td>• Operates a Tag Heuer shop and Dior cosmetics stands in Xinjiang</td></tr>
+ <tr><td>LyondellBasell Industries, Netherlands</td><td>• Licensed technology to a PetroChina subsidiary in Korla</td></tr>
+ <tr><td>Maersk Group, Denmark</td><td>• Subsidiary Damco ships cotton to a Xinjiang production plant for Esquel, a clothing manufacturer</td></tr>
+ <tr><td>Medtronic, Ireland</td><td>• Has sales and support staff working in Xinjiang</td></tr>
+ <tr><td>Metro, Germany</td><td>• Buys fruit from Xinjiang</td></tr>
+ <tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China</td></tr>
+ <tr><td>Munich Re Group, Germany</td><td>• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO</td></tr>
+ <tr><td>Nestle, Switzerland</td><td>• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+ <tr><td>Nokia, Finland</td><td>"• Operates a branch in Urumqi</td></tr>
+ <tr><td>• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang"</td></tr>
+ <tr><td>Novartis, Switzerland</td><td>• Operates a pharmaceuticals office in Urumqi</td></tr>
+ <tr><td>Peugeot, France</td><td>• Has official dealerships across Xinjiang for the Citroen brand</td></tr>
+ <tr><td>Philips, Netherlands</td><td>• Has hired sales positions in Xinjiang</td></tr>
+ <tr><td>Rabobank Group, Netherlands</td><td>• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company</td></tr>
+ <tr><td>Renault, France</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
+ <tr><td>Roche Group, Switzerland</td><td>• Has advertised for account managers in two cities in Xinjiang</td></tr>
+ <tr><td>Royal Dutch Shell, Netherlands</td><td>"• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas</td></tr>
+ <tr><td>• Lubricants business has staff working in Xinjiang•According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated."</td></tr>
+ <tr><td>Safran, France</td><td>• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023</td></tr>
+ <tr><td>Saint-Gobain, France</td><td>• Has advertised for sales positions in Xinjiang</td></tr>
+ <tr><td>Sanofi, France</td><td>• Has a distribution center in Xinjiang and has hired staff across the region</td></tr>
+ <tr><td>SAP, Germany</td><td>• Offers long-term financial and technical support for the Xinjiang Football Youth Association</td></tr>
+ <tr><td>Schneider Electric, France</td><td>• Operates a logistics center in Urumqi</td></tr>
+ <tr><td>Siemens, Germany</td><td>"• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities</td></tr>
+ <tr><td>• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang</td></tr>
+ <tr><td>• Has a branch office in Urumqi"</td></tr>
+ <tr><td>Swiss Re, Switzerland</td><td>"• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program</td></tr>
+ <tr><td>• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant"</td></tr>
+ <tr><td>Telefonica, Spain</td><td>• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang</td></tr>
+ <tr><td>Tesco, United Kingdom</td><td>• Owns a minority stake in a joint venture with China Resources Enterprise, operating stores in Xinjiang</td></tr>
+ <tr><td>ThyssenKrupp, Germany</td><td>• Sells mining equipment in Xinjiang</td></tr>
+ <tr><td>Total, France</td><td>• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy</td></tr>
+ <tr><td>Unilever, Netherlands</td><td>• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+ <tr><td>Veolia Environment, France</td><td>• Operates a wastewater treatment plant in Urumqi</td></tr>
+ <tr><td>Volkswagen, Germany</td><td>"• Volkswagen Group China built a factory near Urumqi, with a capacity of 50,000 vehicles a year</td></tr>
+ <tr><td>• Has 38 authorized dealerships for brands including Audi, Porsche, Skoda, Scania, MAN, and Volkswagen</td></tr>
+ <tr><td>• Built a testing ground in Xinjiang together with SAIC"</td></tr>
+ <tr><td>Boehringer Ingelheim, Germany</td><td>• Has hired staff in Xinjiang</td></tr>
+ <tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang</td></tr>
+ <tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
+ <tr><td>Fresenius, Germany</td><td>• Has hired staff to work in Xinjiang</td></tr>
+ <tr><td>Anheuser-Busch Inbev, Belgium</td><td>• Uses Xinjiang hops in Jiafeng beer</td></tr>
+</tbody></table>
 
 <!–– add your tableizer data above this line––>
 </body>
