--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -54,19 +54,24 @@
 
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Company, Country</th><th>Presence in Xinjiang</th></tr></thead><tbody>
- <tr><td>ABB, Switzerland</td><td>"• Operates a service center in Urumqi</td></tr>
- <tr><td>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"</td></tr>
- <tr><td>Air Liquide, France</td><td>• Has built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
- <tr><td>Airbus, France</td><td>• Subsidiary Airbus Defence and Space worked on the Urumqi subway</td></tr>
- <tr><td>ArcelorMittal, Luxembourg</td><td>• Has a sales office in Urumqi</td></tr>
- <tr><td>Assicurazioni Generali, Italy</td><td>• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million</td></tr>
- <tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang</td></tr>
- <tr><td>BASF, Germany</td><td>"• Operates a chemical plant in Korla</td></tr>
- <tr><td>• Cooperates on tomato production</td></tr>
- <tr><td>with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
- <tr><td>Bayer, Germany</td><td>"• Has advertised for positions in Xinjiang</td></tr>
- <tr><td>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
- <tr><td>BMW Group, Germany</td><td>"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</td></tr>
+ 
+<tr><td>ABB, Switzerland</td><td>• Operates a service center in Urumqi</br></br>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"</td></tr>
+ 
+<tr><td>Air Liquide, France</td><td>• Has built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
+ 
+<tr><td>Airbus, France</td><td>• Subsidiary Airbus Defence and Space worked on the Urumqi subway</td></tr>
+ 
+<tr><td>ArcelorMittal, Luxembourg</td><td>• Has a sales office in Urumqi</td></tr>
+ 
+<tr><td>Assicurazioni Generali, Italy</td><td>• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million</td></tr>
+
+<tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang</td></tr>
+ 
+<tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
+ 
+<tr><td>Bayer, Germany</td><td>• Has advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+ 
+<tr><td>BMW Group, Germany</td><td>"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</td></tr>
  <tr><td>• Has produced marketing campaign produced in Xinjiang"</td></tr>
  <tr><td>Bosch Group, Germany</td><td>• Sells water heaters for residential building development projects in Xinjiang• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development</td></tr>
  <tr><td>Carrefour, France</td><td>"• Buys melons from Xinjiang</td></tr>
