--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -71,43 +71,67 @@
  
 <tr><td>Bayer, Germany</td><td>• Has advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
-<tr><td>BMW Group, Germany</td><td>"• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</td></tr>
- <tr><td>• Has produced marketing campaign produced in Xinjiang"</td></tr>
- <tr><td>Bosch Group, Germany</td><td>• Sells water heaters for residential building development projects in Xinjiang• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development</td></tr>
- <tr><td>Carrefour, France</td><td>"• Buys melons from Xinjiang</td></tr>
- <tr><td>• Operates stores in Xinjiang, most notably one next the the Grand Bazaar in Urumqi"</td></tr>
- <tr><td>Chubb, Switzerland</td><td>• Owns a minority stake in Huatai Group which operates offices in Xinjiang</td></tr>
- <tr><td>Daimler, Germany</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
- <tr><td>Danone, France</td><td>• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang</td></tr>
- <tr><td>Deutsche Bank, Germany</td><td>"• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</td></tr>
- <tr><td>• Managed bond issuance for Xinjiang Goldwind"</td></tr>
- <tr><td>Deutsche Bahn, Germany</td><td>"• Operates an office for its logistics business in Urumqi</td></tr>
- <tr><td>• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang"</td></tr>
- <tr><td>Deutsche Post DHL Group, Germany</td><td>• Has a DHL location in Urumqi</td></tr>
- <tr><td>Engie, France</td><td>• Owns a minority stake in Unisun, a solar services company that works in Xinjiang</td></tr>
- <tr><td>Ericsson, Sweden</td><td>• Operates an office in Xinjiang and has provided LTE technology in the region</td></tr>
- <tr><td>EssilorLuxottica, France</td><td>• Owns a 50% stake in Photosynthesis Group, which operates stores across Xinjiang</td></tr>
- <tr><td>EXOR Group, Netherlands</td><td>"• Subsidiary CNH Industrial has a plant in Urumqi</td></tr>
- <tr><td>• The largest shareholder of Fiat Chrysler, which has dealerships across Xinjiang for brands such as Jeep, Fiat, Chrysler, Dodge, and Maserati"</td></tr>
- <tr><td>GlaxoSmithKline, United Kingdom</td><td>• Has sales representatives based in and working across Xinjiang</td></tr>
- <tr><td>Heineken Holding, Netherlands</td><td>• Owns a minority stake in China Resources Beer, which operates stores in Xinjiang</td></tr>
- <tr><td>Inditex (Industria de Diseno Textil), Spain</td><td>• Operates a Zara store in Xinjiang</td></tr>
- <tr><td>ING Group, Netherlands</td><td>• Owns a minority stake in Bank of Beijing, which operates branches in Xinjiang</td></tr>
- <tr><td>Intesa Sanpaolo, Italy</td><td>•Financed a tree plantation for F.I.L.A. Group in Xinjiang, extending $1.8 million in credit</td></tr>
- <tr><td>Johnson Controls International, Ireland</td><td>"• Has advertised for jobs in Xinjiang</td></tr>
- <tr><td>• Has a branch office in Xinjiang"</td></tr>
- <tr><td>Kering, France</td><td>• Operates a Gucci story in Urumqi</td></tr>
- <tr><td>L'Oreal, France</td><td>• Operates a hair salon in Urumqi</td></tr>
- <tr><td>Linde, Germany</td><td>• Built energy plants across the region</td></tr>
- <tr><td>Louis Dreyfus, Netherlands</td><td>• Operates an office in Urumqi for cotton trading</td></tr>
- <tr><td>Lufthansa Group, Germany</td><td>• Owns a minority stake in an airline catering company based in Xinjiang</td></tr>
- <tr><td>LVMH Moet Hennessy, France</td><td>• Operates a Tag Heuer shop and Dior cosmetics stands in Xinjiang</td></tr>
- <tr><td>LyondellBasell Industries, Netherlands</td><td>• Licensed technology to a PetroChina subsidiary in Korla</td></tr>
- <tr><td>Maersk Group, Denmark</td><td>• Subsidiary Damco ships cotton to a Xinjiang production plant for Esquel, a clothing manufacturer</td></tr>
- <tr><td>Medtronic, Ireland</td><td>• Has sales and support staff working in Xinjiang</td></tr>
- <tr><td>Metro, Germany</td><td>• Buys fruit from Xinjiang</td></tr>
- <tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China</td></tr>
- <tr><td>Munich Re Group, Germany</td><td>• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO</td></tr>
+<tr><td>BMW Group, Germany</td><td>• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</br></br>• Has produced marketing campaign produced in Xinjiang</td></tr>
+ 
+<tr><td>Bosch Group, Germany</td><td>• Sells water heaters for residential building development projects in Xinjiang</br></br>• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development</td></tr>
+ 
+<tr><td>Carrefour, France</td><td>• Buys melons from Xinjiang</br></br>• Operates stores in Xinjiang, most notably one next the the Grand Bazaar in Urumqi</td></tr>
+ 
+<tr><td>Chubb, Switzerland</td><td>• Owns a minority stake in Huatai Group which operates offices in Xinjiang</td></tr>
+ 
+<tr><td>Daimler, Germany</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
+ 
+<tr><td>Danone, France</td><td>• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang</td></tr>
+ 
+<tr><td>Deutsche Bank, Germany</td><td>• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</br></br>• Managed bond issuance for Xinjiang Goldwind</td></tr>
+ 
+<tr><td>Deutsche Bahn, Germany</td><td>• Operates an office for its logistics business in Urumqi</br></br>• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang</td></tr>
+ 
+<tr><td>Deutsche Post DHL Group, Germany</td><td>• Has a DHL location in Urumqi</td></tr>
+ 
+<tr><td>Engie, France</td><td>• Owns a minority stake in Unisun, a solar services company that works in Xinjiang</td></tr>
+ 
+<tr><td>Ericsson, Sweden</td><td>• Operates an office in Xinjiang and has provided LTE technology in the region</td></tr>
+ 
+<tr><td>EssilorLuxottica, France</td><td>• Owns a 50% stake in Photosynthesis Group, which operates stores across Xinjiang</td></tr>
+ 
+<tr><td>EXOR Group, Netherlands</td><td>• Subsidiary CNH Industrial has a plant in Urumqi</br></br>• The largest shareholder of Fiat Chrysler, which has dealerships across Xinjiang for brands such as Jeep, Fiat, Chrysler, Dodge, and Maserati</td></tr>
+ 
+<tr><td>GlaxoSmithKline, United Kingdom</td><td>• Has sales representatives based in and working across Xinjiang</td></tr>
+ 
+<tr><td>Heineken Holding, Netherlands</td><td>• Owns a minority stake in China Resources Beer, which operates stores in Xinjiang</td></tr>
+ 
+<tr><td>Inditex (Industria de Diseno Textil), Spain</td><td>• Operates a Zara store in Xinjiang</td></tr>
+ 
+<tr><td>ING Group, Netherlands</td><td>• Owns a minority stake in Bank of Beijing, which operates branches in Xinjiang</td></tr>
+ 
+<tr><td>Intesa Sanpaolo, Italy</td><td>•Financed a tree plantation for F.I.L.A. Group in Xinjiang, extending $1.8 million in credit</td></tr>
+ 
+<tr><td>Johnson Controls International, Ireland</td><td>• Has advertised for jobs in Xinjiang</br></br>• Has a branch office in Xinjiang</td></tr>
+ 
+<tr><td>Kering, France</td><td>• Operates a Gucci story in Urumqi</td></tr>
+ 
+<tr><td>L'Oreal, France</td><td>• Operates a hair salon in Urumqi</td></tr>
+ 
+<tr><td>Linde, Germany</td><td>• Built energy plants across the region</td></tr>
+ 
+<tr><td>Louis Dreyfus, Netherlands</td><td>• Operates an office in Urumqi for cotton trading</td></tr>
+ 
+<tr><td>Lufthansa Group, Germany</td><td>• Owns a minority stake in an airline catering company based in Xinjiang</td></tr>
+ 
+<tr><td>LVMH Moet Hennessy, France</td><td>• Operates a Tag Heuer shop and Dior cosmetics stands in Xinjiang</td></tr>
+ 
+<tr><td>LyondellBasell Industries, Netherlands</td><td>• Licensed technology to a PetroChina subsidiary in Korla</td></tr>
+ 
+<tr><td>Maersk Group, Denmark</td><td>• Subsidiary Damco ships cotton to a Xinjiang production plant for Esquel, a clothing manufacturer</td></tr>
+ 
+<tr><td>Medtronic, Ireland</td><td>• Has sales and support staff working in Xinjiang</td></tr>
+ 
+<tr><td>Metro, Germany</td><td>• Buys fruit from Xinjiang</td></tr>
+ 
+<tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang</br></br>• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China</td></tr>
+ 
+<tr><td>Munich Re Group, Germany</td><td>• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO</td></tr>
  <tr><td>Nestle, Switzerland</td><td>• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  <tr><td>Nokia, Finland</td><td>"• Operates a branch in Urumqi</td></tr>
  <tr><td>• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang"</td></tr>
